style.css
/* ... */
/* ---------- /initial_part --------- */



/* ---------- about_project_part --------- */

#about_project_part {
  background-image: url('media/parts/about-project/background.webp');
  background-position: 50% 50%;
  background-size: cover;
  position: relative;
  height: 800px;
  min-height: 800px;
}

.about_project_part_overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
}

.about_project_part_overlay h3 {
  width: 55%;
  text-align: center;
  color: white;
  font-family: 'NAMU-paragraph';
  font-size: 1.5em;
  padding: 1.25px;
}

/* ---------- /about_project_part --------- */



/* ---------- about_us_part --------- */

#about_us_part {
  height: fit-content;
  min-height: fit-content;
  background-image: url('media/parts/about-us/background.webp');
  background-position: 50% 50%;
  background-size: cover;
  position: relative;
}

.about_us_part_heading{
  font-family: 'NAMU-heading';
  font-size: 7em;
  margin: 0px;
  padding: 75px 0px 43px 75px;
  color: white;
  text-transform: uppercase;
}

.about_us_part_paragraph {
  /* position: absolute; */
  /* top: 0; */
  /* left: 0; */
  width: 100%;
  /* height: 100%; */
  /* background-color: rgba(0, 0, 0, 0.5); */
  display: flex;
  justify-content: center;
  align-items: center;
}

.about_us_part_paragraph h3 {
  width: 55%;
  /* text-align: center; */
  color: white;
  font-family: 'NAMU-paragraph';
  font-size: 1.5em;
  padding: 1.25px;
  padding-bottom: 75px;
}

.about_us_content {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  width: 95%;
  margin: auto;
}

.about_us_content_media {
  display: none;
}

.about_us_content>div {
  flex: 0 0 30%;
  max-width: 30%;
  box-sizing: border-box;
  padding: 10px 30px 80px 30px;
}

.about_us_cards {
  text-decoration: none;
  flex-shrink: 0;
}

.about_us_cards h2{
  font-family: 'NAMU-paragraph';
  color: white;
  font-size: 2.6rem;
  margin: 30px 0 5px;
  text-align: center;
}

.about_us_cards p {
  font-family: 'NAMU-paragraph';
  color: white;
  font-size: 1.5rem;
  text-align: center;
}

.about_us_img {
  display: flex;
  justify-content: center;
  align-items: center;
}

.swiper-wrapper {
  display: flex;
  align-items: center;
  text-align: center;
}

/* ---------- /about_us_part --------- */



/* ---------- theatre_part --------- */

#theatre_part {
  height: fit-content;
  min-height: fit-content;
  background-image: url('media/parts/theatre/background.webp');
  background-color: black;
  background-position: 50% 50%;
  background-size: cover;
  position: relative;

}

.theatre_part_heading {
  font-family: 'NAMU-heading';
  font-size: 7em;
  margin: 0px;
  padding: 75px 0px 70px 75px;
  color: white;
  text-transform: uppercase;
}


/* модальное окно №1 */

.our_shows {
  height: fit-content;
  min-height: fit-content;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  gap: 100px;
}

#call-form {
  /* font-family: "NAMU-paragraph";
  font-size: 2em; */
  width: 350px;
  height: max-content;
}

.btn-reset,
.btn-reset_2,
.btn-reset_3 {
  border: none;
  padding: 0;
  background-color: transparent;
  cursor: pointer;
}

/* .btn {
  border-radius: 3px;
  padding: 16px;
  font-family: inherit;
  font-weight: 700;
  font-size: 18px;
  color: #000;
  background-color: white;
} */

.modal_gallery_all {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 80%;
}

.modal_gallery {
  width: 100%;
}

.modal_swiper {
  width: 100%;
}

.modal_swiper_slide {
  width: 100%;
}

.modal_gallery_cards {
  flex-shrink: 0;
}

.modal_card_image {
  border-radius: 5px;
  max-height: 600px !important;
}

.modal_gallery_nav {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 30px;
  gap: 50px;
}

.modal_gallery__btn {
  width: 28px;
  height: 28px;
}

.modal_gallery__btn svg {
  width: 100%;
  height: 100%;
  object-fit: cover;
  fill: white;
}

/* модальное окно №2 */

.modal-parent {
  position: fixed;
  inset: 0;
  z-index: 500;
  display: flex;
  overflow-y: auto;
  background-color: rgba(0, 0, 0, 0.8);
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 60px;
  height: 100%;
  padding-top: 0px;
}

.modal-parent--open {
  opacity: 1;
  visibility: visible;
}

.modal {
  margin: 30px 0;
  width: 100%;
  height: 85%;
  border-radius: 5px;
  padding: 40px 20px;
  background-color: #fff;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  overflow: scroll;
}

.modal_info {
  width: 80%;
  margin-left: 10px;
  margin-bottom: 50px;
}

.modal_title {
  margin: 0;
  margin-bottom: 30px;
  text-align: start;
  font-family: "NAMU-paragraph";
}

h2.modal_title {
  font-size: 2.5em;
}

.modal_text {
  font-family: "NAMU-paragraph";
  width: 100%;
  margin-bottom: 20px;
  text-align: start;
}

p.modal_text {
  font-size: 18px;
}

.buy_ticket {
  font-family: "NAMU-paragraph";
  border-radius: 5px;
  border: 1px solid black;
  padding: 7px;
  text-decoration: none;
  color: black;
}

#call-form-2 {
  /* font-family: "NAMU-paragraph";
  font-size: 2em; */
  width: 350px;
  height: max-content;
}

#call-form-3 {
  /* font-family: "NAMU-paragraph";
  font-size: 2em; */
  width: 350px;
  height: max-content;
}

/* .btn_2 {
  border-radius: 3px;
  padding: 16px;
  font-family: inherit;
  font-weight: 700;
  font-size: 18px;
  color: #000;
  background-color: white;
} */

.modal-wrapper {
  width: 80%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.body-lock {
  overflow: hidden;
  position: fixed;
  /* Для предотвращения прокрутки на iOS */
  width: 100%;
}
/* ... */

